modified switch case

--- a/search.html
+++ b/search.html
@@ -75,9 +75,9 @@
         <div id="search-results" class="grid">
           <div class="card"></div>
           <div class="card-body">
-            <h5 class="card-title">Movie or Show Name</h5>
+            <h5 class="card-title">Please Reload the page</h5>
             <p class="card-text">
-              <small class="text-muted"> Release:XX/XX/XXX </small>
+              <small class="text-muted"> Try Again </small>
             </p>
           </div>
         </div>
