--- a/series-details.html
+++ b/series-details.html
@@ -47,7 +47,7 @@
         <div id="series-details"></div>
         <div class="season-container"></div>
       </div>
-      <h4>Click on Episode to Watch Online</h4>
+      <h4>Click on Episode to Watch</h4>
     </section>
     <div id="loader-wrapper">
       <div class="loader-overlay"></div>
