--- a/series-details.html
+++ b/series-details.html
@@ -58,7 +58,7 @@
       </div>
     </div>
     <footer>
-      <h2>Proudly Made For Her <i class="fa-solid fa-heart"></i></h2>
+      <h2>Proudly Made with Love &#129505  <i class="fa-solid fa-heart"></i></h2>
     </footer>
     <script src="script.js"></script>
   </body>
